syntax = "proto3";

option go_package = "types/bundle";

enum HashAlgo {
  SHA256 = 0;
}

message ObjectMeta {
  string name = 1;
  uint64 offset = 2;
  uint64 size = 3;
  HashAlgo hash_algo = 4;
  bytes hash = 5;
  string content_type = 6;
  map<string, string> attributes = 7;
}

message BundleMeta {
  repeated ObjectMeta metas = 1;
}

message Bundle {
  uint64 version = 1;
  uint64 meta_size = 2;
  bytes meta = 3;
  bytes data = 4;
}